--- a/hw3/main.tex
+++ b/hw3/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{amsart}
+\documentclass[11pt, reqno]{amsart}
 
 % Include the macros file from `../common'
 \input{~/latex-common/macros.tex}
