--- a/hw3/p2.tex
+++ b/hw3/p2.tex
@@ -8,7 +8,21 @@
     where $\beta(x)$ is the string $x$ interpreted as a
     binary number.
     \begin{Answer}
-      
+      \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}
+          \node[state, initial, accepting] (q0) at (0, 0) {$q_0$};
+          \node[state, right of=q0] (q1) {$q_1$};
+          \node[state, right of=q1] (q2) {$q_2$};
+          \draw (q0) edge[loop above, above] node {$0$} (q0)
+                (q0) edge[bend left, above] node {$1$} (q1)
+                (q1) edge[bend left, above] node {$0$} (q2)
+                (q1) edge[bend left, below] node {$1$} (q0)
+                (q2) edge[bend left, below] node {$0$} (q1)
+                (q2) edge[loop right, right] node {$1$} (q2);
+        \end{tikzpicture}
+        \caption{DFA for $D_3$}
+      \end{figure}
     \end{Answer}
     \item Convert the DFA into a regular expression
       using the $R_{ij}^k$ method.
