--- a/hw3/p2.tex
+++ b/hw3/p2.tex
@@ -11,9 +11,9 @@
       \begin{figure}[H]
         \centering
         \begin{tikzpicture}
-          \node[state, initial, accepting] (q0) at (0, 0) {$q_0$};
-          \node[state, right of=q0] (q1) {$q_1$};
-          \node[state, right of=q1] (q2) {$q_2$};
+          \node[state, initial, accepting] (q0) at (0, 0) {$q_1$};
+          \node[state, right of=q0] (q1) {$q_2$};
+          \node[state, right of=q1] (q2) {$q_3$};
           \draw (q0) edge[loop above, above] node {$0$} (q0)
                 (q0) edge[bend left, above] node {$1$} (q1)
                 (q1) edge[bend left, above] node {$0$} (q2)
@@ -35,10 +35,36 @@
       the corresponding $R_{ij}^k$.
       Sometimes, you’ll obtain a complicated regular expression if you directly
       apply the equations from class. In such cases, show what the equations give you
-      and only then simplify. You may use the shorthand $X+$ to denote $XX^\ast$,
+      and only then simplify. You may use the shorthand $X^+$ to denote $XX^\ast$,
       where $X$ is an arbitrary regular expression.
-      \begin{Answer}  
+      \begin{Answer}
+        \begin{table}[H]
+          \centering
+          \resizebox{\columnwidth}{!}{%
+          \begin{tabular}{|l|l|l|l|l|l|}
+            \bottomrule
+            $i$ & $j$ & $k = 0$ & $k = 1$ & $k = 2$ & $k = 3$ \\
+            \midrule
+            $q_1$ & $q_1$ & $0$   & $0^*$                           & $0^* \cup 0^*1(10^*1)^*10^*$                      & $0^* \cup (0^*1(10^*1)^*10^*) \cup (0^*1(10^*1)^*0(1 \cup 0(10^*1)^*01^*)^*0(10^*1)^*10^*)$  \\
+            $q_1$ & $q_2$ & $1$   & $1 \cup 0^*1 = \crim{0^*1}$     & $0^*1 \cup 0^*1(10^*1)^* = \crim{0^*1(10^*1)^*}$  & $0^*1(10^*1)^* \cup (0^*1(10^*1)^*0(1 \cup 0(10^*1)^*0)^*0(10^*1)^*)$\\
+            $q_1$ & $q_3$ & $\no$ & $\no$                           & $0^*1(10^*1)^*0$                                  & $0^*1(10^*1)^*0 \cup 0^*1(10^*1)^*0(1 \cup 0(10^*1)^*01^*)^* = \crim{0^*1(10^*1)^*0(1 \cup 0(10^*1)^*0)^*}$ \\
+            $q_2$ & $q_1$ & $1$   & $10^*$                          & $10^* \cup (10^*1)^*10^* = \crim{(10^*1)^*10^*}$  & $(10^*1)^*10^* \cup (0 (1 \cup 0(10^*1)^*0)^*)^*0(10^*1)^*10^*$ \\
+            $q_2$ & $q_2$ & $\no$ & $10^*1$                         & $(10^*1)^*$                                       & $(10^*1)^* \cup (0 (1 \cup 0(10^*1)^*0)^*0)$ \\
+            $q_2$ & $q_3$ & $0$   & $0$                             & $0$                                               & $0 \cup (0(1 \cup 0(10^*1)^*0)^*) = \crim{0(1 \cup 0(10^*1)^*0)^*}$ \\
+            $q_3$ & $q_1$ & $\no$ & $\no$                           & $0(10^*1)^*10^*$                                  & $0(10^*1)^*10^* \cup ((1 \cup 0(10^*1)^*0)^*0(10^*1)^*10^*) = \crim{(1 \cup 0(10^*1)^*0)^*0(10^*1)^*10^*}$ \\
+            $q_3$ & $q_2$ & $0$   & $0$                             & $0(10^*1)^*$                                      & $0(10^*1)^* \cup ((1 \cup 0(10^*1)^*0)^*0(10^*1)^*) = \crim{(1 \cup 0(10^*1)^*0)^*0(10^*1)^*}$ \\
+            $q_3$ & $q_3$ & $1$   & $1$                             & $1 \cup 0(10^*1)^*0$                              & $(1 \cup 0(10^*1)^*0)^*$ \\
+            \toprule
+          \end{tabular}
+          }
+          \caption{Regular Expressions Generated via the $R_{ij}^k$ Method}
+        \end{table}
 
+        \step
+        The regular expression for the DFA is the union
+        \[ \bigcup_{f \in F} R^n_{1n}. \]
+        Since $F = \set{1}$, the regular expression for the DFA is
+        \[ R_{11}^3 = 0^* \cup (0^*1(10^*1)^*10^*) \cup (0^*1(10^*1)^*0(1 \cup 0(10^*1)^*01^*)^*0(10^*1)^*10^*). \]
       \end{Answer}
   \end{enumalph}
 \end{problem}
